[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serial-commander"
version = "0.0.1-alpha"
description = "year 2 project 上位机代码"
requires-python = ">=3.10"
dependencies = [
    "pySerialTransfer",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]